<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_hero_name">Search Hero Name (Hulk, Thor, etc)</string>
    <string name="main_title">What Superhero are you looking for ?</string>
    <string name="your_favorite_hero">Your favorite hero</string>
    <string name="zero">0</string>
    <string name="something_wrong">Oops… something went wrong</string>
    <string name="data_not_found">Oops… data not found</string>
    <string name="image_error">Image Error</string>
    <string name="hero_image">Hero Image</string>
</resources>