<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-40dp"
            android:adjustViewBounds="true"
            android:alpha="0.30"
            android:background="@drawable/hero"
            android:contentDescription="@string/hero_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white" />

    </RelativeLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            app:collapsedTitleTextAppearance="@style/Theme.SuperHeroApp.Collapsed"
            app:expandedTitleTextAppearance="@style/Theme.SuperHeroApp.Expanded"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/main_title"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bottom_border_red"
                    android:paddingTop="16dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:elevation="0dp">

                    <EditText
                        android:id="@+id/edt_search_hero"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_margin="8dp"
                        android:autofillHints="name"
                        android:background="@drawable/background_search_bar"
                        android:drawableStart="@drawable/ic_baseline_search"
                        android:drawablePadding="16dp"
                        android:hint="@string/search_hero_name"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:padding="16dp" />

                </androidx.appcompat.widget.Toolbar>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                tools:listitem="@layout/layout_list_hero" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="gone" />

            <include
                android:id="@+id/layout_error"
                layout="@layout/layout_home_error" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_gravity="bottom|end"
        android:id="@+id/layout_favorite"
        style="?attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:focusable="true">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_favorite"
            android:contentDescription="@string/your_favorite_hero"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/cart_badge"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="-8dp"
            android:background="@drawable/badge_background"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>